feature(UserTagArticles): User Tag Articles
- ensure unit tests are written to test the functionality to be implemented
- ensure that data model for the tag articles feature was set up with sequelize
- ensure that user can perform tag CRD operations on artciles (CRD - Create, Read/Access, Delete)
- ensure there are validations implemented on the features
- update swagger documentation for the features implemented

[Delivers #166840930]
